CHANGES 0.1.1 - 0.1.2
  * Now the Addsite.pl script looks for new links at the given url
    and store them.

CHANGES 0.1.0 - 0.1.1
  * Added memcache support in Client in order to store the lastest result.

CHANGES 0.0.4 - 0.1.0
  * Added the GoblinClient php's class. It aimed to be an API for the
    Goblin Server (see README)
  * Goblin is now forked in two. The Goblin Client and the server.

CHANGES Goblin 0.0.3 - 0.0.4
  * Added xsearch and hsearch methods to the SOAP server which ouputs
    XML and HTML.
  * Added xsoap.pl and goblin.php in order to test xsearch and hsearch.
  * Added an useragent to Fetcher.pm in order to avoid some 'protections'
  * Little bugfixs to regexs in AddSite.pl.

CHANGES Goblin 0.0.2 - 0.0.3
  * Class Engine now stores a list of Sites instead a list of URLs.
  * Cleared some unnecessary checks in AddSites.pl
  * Added a SOAP server and a test client to make searches

CHANGES Goblin 0.0.1 - 0.0.2
  * Made addsite.pl just a bit cleaner but it needs more.  
  * Added new methods to db.pm in order to make insertions and searches.
  * You can't add sites that already exists in the database.
  * Added Search.pl wich take the tags as arguments and show the sites that matches.
  * Made an "Engine" class to manage the search.