@@ -1,6 +1,8 @@
 CHANGES 0.1.1 - 0.1.2
   * Now the Addsite.pl script looks for new links at the given url
     and store them.
+  * Changed the User Agent used with LWP at Fetcher.pm to identify
+    Goblin.
 
 CHANGES 0.1.0 - 0.1.1
   * Added memcache support in Client in order to store the lastest result.
